Se agrega la funcionalida del modal

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
     <header id="header" class="header"></header>
     <main class="main" id="main-container">
     </main>
+    <section id="modal" class="modal-container hide" ></section>
 </body>
 </html>
