--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>SPA Rick & Morty</title>
+    <link rel="icon" href="">
+    <title>Rick & Morty</title>
 </head>
 <body>
     <header id="header" class="header"></header>
-    <main class="main" id="main-container">
+    <main class="main" >
+    <div class="character" id="main-container"> </div>
     </main>
     <section id="modal" class="modal-container hide" ></section>
 </body>
